# command-line-rust

./: .editorconfig  Cargo.toml  README.md  flake.nix  lefthook.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml
.zed/: settings.json  tasks.json
cmd/calr/: Cargo.toml  mk-outs.sh
cmd/calr/src/: lib.rs  main.rs
cmd/calr/tests/: cli.rs
cmd/catr/: Cargo.toml  mk-outs.sh
cmd/catr/src/: lib.rs  main.rs
cmd/catr/tests/: cli.rs
cmd/commr/: Cargo.toml
cmd/commr/src/: lib.rs  main.rs
cmd/commr/tests/: cli.rs
cmd/cutr/: Cargo.toml
cmd/cutr/src/: lib.rs  main.rs
cmd/cutr/tests/: cli.rs
cmd/echor/: Cargo.toml
cmd/echor/src/: lib.rs  main.rs
cmd/echor/tests/: cli.rs
cmd/findr/: Cargo.toml
cmd/findr/src/: lib.rs  main.rs
cmd/findr/tests/: cli.rs
cmd/fortuner/: Cargo.toml
cmd/fortuner/src/: lib.rs  main.rs
cmd/fortuner/tests/: cli.rs
cmd/grepr/: Cargo.toml
cmd/grepr/src/: lib.rs  main.rs
cmd/grepr/tests/: cli.rs
cmd/headr/: Cargo.toml  mk-outs.sh
cmd/headr/src/: lib.rs  main.rs
cmd/headr/tests/: cli.rs
cmd/hello/: Cargo.toml
cmd/hello/src/: main.rs
cmd/hello/tests/: cli.rs
cmd/lsr/: Cargo.toml
cmd/lsr/src/: lib.rs  main.rs
cmd/lsr/tests/: cli.rs
cmd/tailr/: Cargo.toml
cmd/tailr/src/: lib.rs  main.rs
cmd/tailr/tests/: cli.rs
cmd/uniqr/: Cargo.toml
cmd/uniqr/src/: lib.rs  main.rs
cmd/uniqr/tests/: cli.rs
cmd/wcr/: Cargo.toml
cmd/wcr/src/: lib.rs  main.rs
cmd/wcr/tests/: cli.rs
