[workspace]
resolver = "3"
members = ["cmd/*"]

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.1.2"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
itertools = "0.14.0"
num = "0.4.3"
once_cell = "1.21.3"
owo-colors = "4.3.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
rand = "0.10.0"
regex = "1.12.3"
sysinfo = "0.38.3"
tabled = "0.20.0"
tempfile = "3.26.0"
uzers = "0.12.2"
walkdir = "2.5.0"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"
