[workspace]
resolver = "3"
members = ["cmd/*"]

[workspace.dependencies]
anyhow = { version = "1.0.103", default-features = false }
assert_cmd = "2.2.2"
chrono = { version = "0.4.45", features = ["clock"], default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
itertools = { version = "0.15.0", features = ["use_alloc"], default-features = false }
owo-colors = "4.3.0"
predicates = { version = "3.1.4", features = ["regex"], default-features = false }
pretty_assertions = "1.4.1"
rand = "0.10.2"
regex = "1.13.1"
sysinfo = { version = "0.39.6", features = ["system"], default-features = false }
tabled = { version = "0.21.0", features = ["derive"], default-features = false }
tempfile = { version = "3.27.0", default-features = false }
uzers = { version = "0.12.2", default-features = false }
walkdir = "2.5.0"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
version = "0.1.0"
