[package]
name = "calr"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ansi_term.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
